<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <RelativeLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.cardview.widget.CardView
            style="@style/CustomDarkLightModeBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:indeterminateTint="@color/light_blue" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif-light"
                android:padding="6dp"
                android:text="@string/settings"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="18dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif-light"
                android:padding="6dp"
                android:text="@string/temperature_unit"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_thermostat"
                app:drawableTint="@color/light_blue"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/CustomDarkLightModeBackground"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/celsius"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/btn_celsius"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:minWidth="0dp"
                            android:minHeight="0dp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/CustomDarkLightModeBackground"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="12dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:gravity="center"
                            android:text="@string/fahrenheit"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/btn_fahrenheit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:minWidth="0dp"
                            android:minHeight="0dp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif-light"
                android:padding="6dp"
                android:text="@string/theme"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_palette"
                app:drawableTint="@color/light_blue"
                android:drawablePadding="2dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    style="@style/CustomDarkLightModeBackground"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:drawablePadding="2dp"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/light_mode"
                            android:textSize="16sp" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:src="@drawable/light_mode"
                            android:padding="6dp"/>

                        <RadioButton
                            android:id="@+id/btn_light_mode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:minWidth="0dp"
                            android:minHeight="0dp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/CustomDarkLightModeBackground"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:drawablePadding="2dp"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/dark_mode"
                            android:textSize="16sp" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:src="@drawable/dark_mode"
                            android:padding="6dp"/>

                        <RadioButton
                            android:id="@+id/btn_dark_mode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:minWidth="0dp"
                            android:minHeight="0dp"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                style="@style/CustomDarkLightModeBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="2dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/follow_device_theme"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="80dp"
                        android:src="@drawable/automatic_mode"
                        android:padding="6dp"/>

                    <RadioButton
                        android:id="@+id/btn_automatic_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:minWidth="0dp"
                        android:minHeight="0dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>