<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/primary_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomDarkLightModeBackground"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        tools:text="00:00"
                        android:textSize="16sp"
                        android:layout_marginBottom="10dp"
                        app:drawableStartCompat="@drawable/ic_hour"
                        app:drawableTint="@color/light_blue"
                        android:drawablePadding="2dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_temperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            tools:text="16.0"
                            android:textSize="60sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="12dp"
                            android:fontFamily="sans-serif-light"
                            android:gravity="top"
                            android:text="@string/celsius"
                            android:textSize="25sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/txt_condition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        tools:text="Partly Cloudy"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/feels_like"
                            android:textSize="16sp"
                            android:layout_marginEnd="3dp"/>

                        <TextView
                            android:id="@+id/txt_feels_like"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            tools:text="16"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/txt_feels_like_grades"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/celsius"
                            android:textSize="11sp"
                            android:layout_marginTop="2dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/chance_of_rain"
                            android:textSize="16sp"
                            android:layout_marginEnd="3dp"/>

                        <TextView
                            android:id="@+id/txt_chance_of_rain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            tools:text="50"
                            android:textSize="16sp"
                            android:layout_marginEnd="2dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/percentage"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/secondary_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomDarkLightModeBackgroundLayout"
                    app:cardCornerRadius="40dp"
                    app:cardElevation="8dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/img_icon"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_cloud_off"
                        tools:tint="@color/black"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>